chore: adjusting to work with jitsi 6.1.0

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -205,6 +205,8 @@ dependencies {
         implementation jscFlavor
     }
 
+  implementation ('org.jitsi.react:jitsi-meet-sdk:6.0.0');
+
     implementation project(':reactnativejitsimeet')
 }
 
