--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -17,6 +17,10 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+FLIPPER_VERSION=0.54.0
+
+version=19
+
 android.useAndroidX=true
 android.enableJetifier=true
-FLIPPER_VERSION=0.54.0
+android.enableR8=true
