--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bortolilucas/react-native-jitsimeet",
+  "name": "@zenklub/react-native-jitsimeet",
   "version": "2.3.1",
   "description": "React native Wrapper for Jitsi Meet SDK",
   "main": "lib/commonjs/index",
@@ -55,8 +55,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react": "^16.14.21",
+    "@types/react-native": "0.63.57",
     "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
@@ -64,12 +64,12 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "prettier": "^2.4.1",
+    "react": "17.0.2",
+    "react-native": "0.68.1",
     "react-native-builder-bob": "^0.18.0",
     "release-it": "^14.2.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
     "react": "*",
@@ -154,5 +154,7 @@
       ]
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-native-immersive": "^2.0.0"
+  }
 }
